# TreeAgent

./: .env.example  .gitignore  README.md  pyproject.toml
baseline/Lasso/: alpha_search.json  feature_coefficients.csv  lasso_metrics.json  lasso_pipeline.joblib  model_metadata.json  portfolio_stats.csv  portfolio_summary.json  quarterly_returns.csv  run_lasso.py  test_predictions.csv  validation_predictions.csv
baseline/classification/: classification_metrics.json  label_thresholds.json  model_metadata.json  portfolio_stats.csv  portfolio_summary.json  quarterly_returns.csv  run_classification.py  test_predictions.csv  validation_predictions.csv  xgb_classifier.json
baseline/prelag/: baseline_metrics.json  portfolio_stats.csv  portfolio_summary.json  quarterly_returns.csv  run_baseline.py  test_predictions.csv  validation_predictions.csv
outputs/backtests/: portfolio_stats.csv  portfolio_summary.json  quarterly_returns.csv
outputs/models/: model_metadata.json  preprocessor.joblib  xgb_model.json
outputs/reports/: best_params.json  data_quality_report.json  feature_importance.csv  test_predictions.csv  training_metrics.json  tuning_results.csv  validation_predictions.csv
pe_pipeline/: __init__.py  cli.py  config.py  exceptions.py  logging_utils.py
pe_pipeline/backtesting/: engine.py  portfolio.py  reports.py  returns.py
pe_pipeline/data_sources/: __init__.py  base.py  fundamentals.py  macro.py  pe_ratios.py  prices.py  (+1 more)
tests/: __init__.py  test_backtest_engine.py  test_dataset_builder.py  test_quarter_aggregation.py  test_splits.py  test_target_builder.py
(+26 files in other folders)
